[package]
name = "raymatching_sdf"
version = "0.1.0"
authors = ["Luka Tadic <luka.tadic@fer.hr>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.24.1"
gl = "0.14.0"
imgui = "0.4.0"
imgui-winit-support = "0.4.0"

[build-dependencies]
gl_generator = "0.14.0"
